[project]
name = "bubble-telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "imgkit>=1.2.3",
    "jinja2>=3.1.6",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "playwright>=1.51.0",
    "plotly>=6.0.1",
    "pydantic>=2.11.3",
]
